// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.edpaggregator.v1alpha;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/type/interval.proto";
import "wfa/measurement/edpaggregator/v1alpha/impression_metadata.proto";

// (-- api-linter: core::0191::java-package=disabled
//     aip.dev/not-precedent: Project-wide convention. --)
option java_package = "org.wfanet.measurement.edpaggregator.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "ImpressionMetadataServiceProto";

// Service for managing ImpressionMetadata.
service ImpressionMetadataService {
  // Creates a new ImpressionMetadata entry.
  rpc CreateImpressionMetadata(CreateImpressionMetadataRequest)
      returns (ImpressionMetadata) {
    option (google.api.http) = {
      post: "/v1alpha/{parent=dataProviders/*}/impressionMetadata"
      body: "impression_metadata"
    };
    option (google.api.method_signature) =
        "parent,impression_metadata,impression_metadata_id";
  }

  // Creates multiple new ImpressionMetadata entries in a single request.
  rpc BatchCreateImpressionMetadata(BatchCreateImpressionMetadataRequest)
      returns (BatchCreateImpressionMetadataResponse) {
    option (google.api.http) = {
      post: "/v1alpha/{parent=dataProviders/*}/impressionMetadata:batchCreate"
      body: "*"
    };
  }

  // Retrieves a specific ImpressionMetadata entry.
  rpc GetImpressionMetadata(GetImpressionMetadataRequest)
      returns (ImpressionMetadata) {
    option (google.api.http) = {
      get: "/v1alpha/{name=dataProviders/*/impressionMetadata/*}"
    };
    option (google.api.method_signature) = "name";
  }

  // Lists ImpressionMetadata entries, with optional filtering.
  rpc ListImpressionMetadata(ListImpressionMetadataRequest)
      returns (ListImpressionMetadataResponse) {
    option (google.api.http) = {
      get: "/v1alpha/{parent=dataProviders/*}/impressionMetadata"
    };
    option (google.api.method_signature) = "parent";
  }

  // Marks an ImpressionMetadata entry as deleted.
  rpc DeleteImpressionMetadata(DeleteImpressionMetadataRequest)
      returns (ImpressionMetadata) {
    option (google.api.http) = {
      delete: "/v1alpha/{name=dataProviders/*/impressionMetadata/*}"
    };
    option (google.api.method_signature) = "name";
  }

  // Marks multiple ImpressionMetadata entries as deleted in a single request.
  rpc BatchDeleteImpressionMetadata(BatchDeleteImpressionMetadataRequest)
      returns (BatchDeleteImpressionMetadataResponse) {
    option (google.api.http) = {
      post: "/v1alpha/{parent=dataProviders/*}/impressionMetadata:batchDelete"
      body: "*"
    };
  }
}

// Request message for the `CreateImpressionMetadata` method.
message CreateImpressionMetadataRequest {
  // The parent data provider resource name.
  // Format: `dataProviders/{data_provider}`
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      child_type: "edpaggregator.halo-cmm.org/ImpressionMetadata"
    }
  ];

  // The ImpressionMetadata to create.
  // The `name` and output-only fields are ignored.
  ImpressionMetadata impression_metadata = 2
      [(google.api.field_behavior) = REQUIRED];

  // Optional. The ID to use for the `ImpressionMetadata`.
  //
  // If not provided, a system-generated unique ID will be used.
  string impression_metadata_id = 3 [(google.api.field_behavior) = OPTIONAL];
}

// Request message for the `BatchCreateImpressionMetadata` method.
// (-- api-linter: core::0233::request-requests-field=disabled
//     aip.dev/not-precedent: Linter incorrectly singularizes "Metadata" to
//     "Metadatum". The `requests` field correctly uses the
//     `CreateImpressionMetadataRequest` type. --)
message BatchCreateImpressionMetadataRequest {
  // The parent data provider resource name.
  // Format: `dataProviders/{data_provider}`
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      child_type: "edpaggregator.halo-cmm.org/ImpressionMetadata"
    }
  ];

  // The list of ImpressionMetadata to create.
  repeated CreateImpressionMetadataRequest requests = 2
      [(google.api.field_behavior) = REQUIRED];
}

// Response message for the `BatchCreateImpressionMetadata` method.
// (-- api-linter: core::0233::response-resource-field=disabled
//     aip.dev/not-precedent: Linter incorrectly singularizes "Metadata" to
//     "Metadatum". The response correctly contains a repeated
//     `ImpressionMetadata` resource. --)
message BatchCreateImpressionMetadataResponse {
  // The list of newly created ImpressionMetadata, in the same order as the
  // request.
  repeated ImpressionMetadata impression_metadata = 1;
}

// Request message for the `GetImpressionMetadata` method.
message GetImpressionMetadataRequest {
  // The resource name of the ImpressionMetadata to retrieve.
  // Format:
  // `dataProviders/{data_provider}/impressionMetadata/{impression_metadata}`
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "edpaggregator.halo-cmm.org/ImpressionMetadata"
    }
  ];
}

// Request message for the `ListImpressionMetadata` method.
message ListImpressionMetadataRequest {
  // The parent data provider resource name.
  // Format: `dataProviders/{data_provider}`
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      child_type: "edpaggregator.halo-cmm.org/ImpressionMetadata"
    }
  ];

  // The maximum number of results to return.
  int32 page_size = 2 [(google.api.field_behavior) = OPTIONAL];

  // A page token, received from a previous call.
  string page_token = 3 [(google.api.field_behavior) = OPTIONAL];
}

// Response message for the `ListImpressionMetadata` method.
message ListImpressionMetadataResponse {
  // A list of `ImpressionMetadata` entries matching the request.
  repeated ImpressionMetadata impression_metadata = 1;

  // A token to retrieve the next page of results.
  string next_page_token = 2;
}

// Request message for the `DeleteImpressionMetadata` method.
message DeleteImpressionMetadataRequest {
  // The resource name of the ImpressionMetadata to delete.
  // Format:
  // `dataProviders/{data_provider}/impressionMetadata/{impression_metadata}`
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "edpaggregator.halo-cmm.org/ImpressionMetadata"
    }
  ];
}

// Request message for the `BatchDeleteImpressionMetadata` method.
message BatchDeleteImpressionMetadataRequest {
  // The parent data provider resource name.
  // Format: `dataProviders/{data_provider}`
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      child_type: "edpaggregator.halo-cmm.org/ImpressionMetadata"
    }
  ];

  // The resource names of the ImpressionMetadata to delete.
  repeated string names = 2 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "edpaggregator.halo-cmm.org/ImpressionMetadata"
    }
  ];
}

// Response message for the `BatchDeleteImpressionMetadata` method.
// (-- api-linter: core::0235::response-resource-field=disabled
//     aip.dev/not-precedent: Linter incorrectly singularizes "Metadata" to
//     "Metadatum". The response correctly contains a repeated
//     `ImpressionMetadata` resource. --)
message BatchDeleteImpressionMetadataResponse {
  // The list of updated ImpressionMetadata, now marked as deleted.
  repeated ImpressionMetadata impression_metadata = 1;
}